added WikiScrapper to_csv and to_mlab

--- a/stack_overflow_data_exploration.ipynb
+++ b/stack_overflow_data_exploration.ipynb
@@ -12,6 +12,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topics to research:\n",
+    "\n",
+    "* LDA for topic modeling \n",
+    "* NLTK for supervised NLP\n",
+    "* tokenize\n",
+    "* vectorize\n",
+    "* Jensen \n",
+    "* text blob\n",
+    "* tfidf (term frequency inverse document frequency) (gives weighted values for words. doesn't run through LDA easily)\n",
+    "* NNMF (non negative matrix vectorization"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
