saved top wikipedia articles

--- a/wikipedia_api/related_links_scrapper.ipynb
+++ b/wikipedia_api/related_links_scrapper.ipynb
@@ -180,32 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scrapper = WikiScrapper()\n",
     "\n",
-    "scrapper.traverse_from(\"https://en.wikipedia.org/wiki/Brain\", max_depth=2, max_nodes=3)\n",
-    "len(scrapper.data)"
+    "scrapper.traverse_from(\"https://en.wikipedia.org/wiki/Brain\", max_depth=3, max_nodes=None);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
