excerpted functions and classes to modules

--- a/wikipedia_api/test_api.ipynb
+++ b/wikipedia_api/test_api.ipynb
@@ -613,355 +613,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Abiogenesis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Abolitionism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Abortion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Abraham</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Abraham Lincoln</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Abstract art</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Abu Nuwas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Achaemenid Empire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Acid–base reaction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Adam Smith</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Addiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Addition</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Adi Shankara</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Adolescence</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Adolf Hitler</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Adult</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Aesthetics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Afterlife</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Age of Discovery</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Age of Enlightenment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Ageing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Agriculture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Aircraft</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Alan Turing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Albert Einstein</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Alcoholic drink</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Alcoholism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Alexander the Great</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>966</th>\n",
-       "      <td>Walt Disney</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>967</th>\n",
-       "      <td>War</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>968</th>\n",
-       "      <td>Water</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>969</th>\n",
-       "      <td>Wave</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>Weak interaction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>Weapon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>972</th>\n",
-       "      <td>Weather</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>973</th>\n",
-       "      <td>Werner Heisenberg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>974</th>\n",
-       "      <td>Western esotericism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>975</th>\n",
-       "      <td>Western philosophy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>976</th>\n",
-       "      <td>Wheat</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>977</th>\n",
-       "      <td>Wheel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>978</th>\n",
-       "      <td>William Shakespeare</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>979</th>\n",
-       "      <td>Wind</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>980</th>\n",
-       "      <td>Wind power</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>981</th>\n",
-       "      <td>Winston Churchill</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>982</th>\n",
-       "      <td>Wolfgang Amadeus Mozart</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>983</th>\n",
-       "      <td>Woman</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>984</th>\n",
-       "      <td>Women's suffrage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>985</th>\n",
-       "      <td>Wood</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>986</th>\n",
-       "      <td>Word</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>987</th>\n",
-       "      <td>World Health Organization</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>988</th>\n",
-       "      <td>World Trade Organization</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>989</th>\n",
-       "      <td>World War I</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>990</th>\n",
-       "      <td>World War II</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>991</th>\n",
-       "      <td>Writing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>992</th>\n",
-       "      <td>Yangtze</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>993</th>\n",
-       "      <td>Year</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>994</th>\n",
-       "      <td>Zheng He</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>Zoology</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>996 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         title\n",
-       "0                            0\n",
-       "1                  Abiogenesis\n",
-       "2                 Abolitionism\n",
-       "3                     Abortion\n",
-       "4                      Abraham\n",
-       "5              Abraham Lincoln\n",
-       "6                 Abstract art\n",
-       "7                    Abu Nuwas\n",
-       "8            Achaemenid Empire\n",
-       "9           Acid–base reaction\n",
-       "10                  Adam Smith\n",
-       "11                   Addiction\n",
-       "12                    Addition\n",
-       "13                Adi Shankara\n",
-       "14                 Adolescence\n",
-       "15                Adolf Hitler\n",
-       "16                       Adult\n",
-       "17                  Aesthetics\n",
-       "18                      Africa\n",
-       "19                   Afterlife\n",
-       "20            Age of Discovery\n",
-       "21        Age of Enlightenment\n",
-       "22                      Ageing\n",
-       "23                 Agriculture\n",
-       "24                    Aircraft\n",
-       "25                 Alan Turing\n",
-       "26             Albert Einstein\n",
-       "27             Alcoholic drink\n",
-       "28                  Alcoholism\n",
-       "29         Alexander the Great\n",
-       "..                         ...\n",
-       "966                Walt Disney\n",
-       "967                        War\n",
-       "968                      Water\n",
-       "969                       Wave\n",
-       "970           Weak interaction\n",
-       "971                     Weapon\n",
-       "972                    Weather\n",
-       "973          Werner Heisenberg\n",
-       "974        Western esotericism\n",
-       "975         Western philosophy\n",
-       "976                      Wheat\n",
-       "977                      Wheel\n",
-       "978        William Shakespeare\n",
-       "979                       Wind\n",
-       "980                 Wind power\n",
-       "981          Winston Churchill\n",
-       "982    Wolfgang Amadeus Mozart\n",
-       "983                      Woman\n",
-       "984           Women's suffrage\n",
-       "985                       Wood\n",
-       "986                       Word\n",
-       "987  World Health Organization\n",
-       "988   World Trade Organization\n",
-       "989                World War I\n",
-       "990               World War II\n",
-       "991                    Writing\n",
-       "992                    Yangtze\n",
-       "993                       Year\n",
-       "994                   Zheng He\n",
-       "995                    Zoology\n",
-       "\n",
-       "[996 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "link_titles = []\n",
     "\n",
@@ -988,7 +642,7 @@
     "        call_api(params)\n",
     "    \n",
     "call_api(params)\n",
-    "pd.DataFrame(link_titles, columns=[\"title\"]).to_csv(\"top_\")"
+    "pd.DataFrame(link_titles, columns=[\"title\"]).to_csv(\"top_wikipedia_articles.csv\", index=False)"
    ]
   },
   {
