--- a/wikipedia_api/get_labeled_data.ipynb
+++ b/wikipedia_api/get_labeled_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,9 @@
     "%autoreload 1\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
+    "pd.options.display.max_rows = 999\n",
+    "\n",
     "import requests\n",
     "import time\n",
     "import signal\n",
@@ -23,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,39 +35,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URL: https://en.wikipedia.org/wiki/Germany\n",
-      "RESPONSE: 200\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Germany',\n",
-       " 'url': 'https://en.wikipedia.org/wiki/Germany',\n",
-       " 'links': ('https://en.wikipedia.org/wiki/Index_of_Germany-related_articles',\n",
-       "  'https://en.wikipedia.org/wiki/Outline_of_Germany',\n",
-       "  'https://en.wikipedia.org/wiki/Book:Germany')}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "get_related_links.get_related_links(\"https://en.wikipedia.org/wiki/Germany\")"
+    "for i in range(titles_df.shape[0]):\n",
+    "    current = titles_df.iloc[i]\n",
+    "    \n",
+    "    if current.visited == 0:\n",
+    "        \n",
+    "        title = current.title\n",
+    "        \n",
+    "        scrapper = WikiScrapper.WikiScrapper()\n",
+    "        try:\n",
+    "            scrapper.traverse_from(\"https://en.wikipedia.org/wiki/{}\".format(title), max_depth=3, max_nodes=None)\n",
+    "            scrapper.to_mlab()\n",
+    "        except:\n",
+    "            print(title, \"skipped\")\n",
+    "            \n",
+    "        titles_df.iloc[i,1] = 1\n",
+    "        titles_df.to_csv(\"top_wikipedia_articles.csv\", index=False)\n",
+    "        \n",
+    "#         print(title)\n",
+    "    \n",
+    "        time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,73 +79,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Anthropology\n",
-      "URL: https://en.wikipedia.org/wiki/Anthropology\n",
-      "RESPONSE: 200\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.germananthropology.com/\n",
-      "queue len 13\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.aaanet.org/\n",
-      "queue len 12\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.easaonline.org/\n",
-      "queue len 11\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.physanth.org/\n",
-      "queue len 10\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.aas.asn.au/\n",
-      "queue len 9\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.aibr.org/\n",
-      "queue len 8\n",
-      "BAD URL: https://en.wikipedia.orghttp://hraf.yale.edu\n",
-      "queue len 7\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.practicinganthropology.org/\n",
-      "queue len 6\n",
-      "BAD URL: https://en.wikipedia.orghttp://radicalanthropologygroup.org/about\n",
-      "queue len 5\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.therai.org.uk/\n",
-      "queue len 4\n",
-      "BAD URL: https://en.wikipedia.orghttp://www.sfaa.net/\n",
-      "queue len 3\n",
-      "BAD URL: https://en.wikipedia.orghttp://anthro.amnh.org/\n",
-      "queue len 2\n",
-      "BAD URL: https://en.wikipedia.orghttp://anthropology.si.edu/\n",
-      "queue len 1\n",
-      "BAD URL: https://en.wikipedia.orghttps://aio.therai.org.uk/aio.php\n",
-      "queue len 0\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for i in range(titles_df.shape[0]):\n",
-    "    current = titles_df.iloc[i]\n",
-    "    \n",
-    "    if current.visited == 0:\n",
-    "        \n",
-    "        title = current.title\n",
-    "        print(title)\n",
-    "        \n",
-    "        scrapper = WikiScrapper.WikiScrapper()\n",
-    "        try:\n",
-    "#             signal.alarm(5)\n",
-    "            scrapper.traverse_from(\"https://en.wikipedia.org/wiki/{}\".format(title), max_depth=3, max_nodes=None)\n",
-    "            scrapper.to_mlab()\n",
-    "#             signal.alarm(0)\n",
-    "        except:\n",
-    "            print(title, \"skipped\")\n",
-    "            continue\n",
-    "            \n",
-    "        titles_df.iloc[i,1] = 1\n",
-    "        titles_df.to_csv(\"top_wikipedia_articles.csv\", index=False)\n",
-    "        \n",
-    "#         print(title)\n",
-    "    \n",
-    "        time.sleep(2)"
+    "get_related_links.get_related_links(\"https://en.wikipedia.org/wiki/Germany\")"
    ]
   },
   {
