finished getting labeled data

--- a/wikipedia_api/get_labeled_data.ipynb
+++ b/wikipedia_api/get_labeled_data.ipynb
@@ -114,6 +114,15 @@
     "    print(i, end=\"\\r\", flush=True)\n",
     "    time.sleep(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()"
+   ]
   }
  ],
  "metadata": {
